tests/ui/traits/const-traits/ice-112822-expected-type-for-param.stderr
error[E0277]: the trait bound `{closure@$DIR/ice-112822-expected-type-for-param.rs:6:5: 6:18}: [const] Fn()` is not satisfied
  --> $DIR/ice-112822-expected-type-for-param.rs:4:20
   |
LL | const fn test() -> impl [const] Fn() {
   |                    ^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
